fixed button move on mobile

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -153,7 +153,7 @@ a:hover {
 		border: 1px solid;
 		border-radius: 10px;
 		padding: 10px;
-		margin: 0% 0% 0% 1%;
+		margin: 0% 0% 0% 0%;
 		width: 100px;
 	    text-align: center;
 		font-weight: 600;
@@ -307,7 +307,7 @@ a:hover {
 		border: 1px solid;
 		border-radius: 10px;
 		padding: 10px;
-		margin: 0% 0% 0% 1%;
+		margin: 0% 0% 0% 0%;
 		width: 100px;
     	text-align: center;
 		font-weight: 600;
